@@ -1,7 +1,7 @@
 name: trosko
 description: 'Budget tracking application in Flutter.'
 publish_to: 'none'
-version: 1.3.0+130
+version: 1.3.5+135
 
 #
 # DEPLOYING APP
